# rairs

./: .gitignore  CMakeLists.txt  README.md  rairs_test.cpp
include/faiss/rair/: IndexReIVF.h  IndexReIVFFastScan.h  IndexReIVFFlat.h  IndexReIVFPQFastScan.h
include/faiss/rair/impl/: dedup_pq4_fast_scan.h  dedup_simd_result_handlers.h
include/faiss/rair/utils/: Flat15HashSet.h  bitmap.h
lib/: IndexReIVF.cpp  IndexReIVFFastScan.cpp  IndexReIVFFlat.cpp  IndexReIVFPQFastScan.cpp
lib/impl/: dedup_pq4_fast_scan_search_1.cpp  dedup_pq4_fast_scan_search_qbs.cpp
