cmake_minimum_required(VERSION 3.0.0)
cmake_policy(SET CMP0069 NEW) # For INTERPROCEDURAL_OPTIMIZATION
project(rairs)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-unused -Wno-sign-compare -Wstrict-aliasing")
if(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -fno-strict-aliasing")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address -fno-omit-frame-pointer")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -flto -funroll-loops -march=native")
    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang"
        OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -flto")
    endif()
endif()

if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
endif()

file(GLOB_RECURSE RAIRS_SRC lib/*.cpp)
include_directories("include;/usr/local/include")
link_directories("/usr/local/lib")
if(EXISTS "/usr/local/lib64")
    message(STATUS "Directory /usr/local/lib64 exists.")
    link_directories("/usr/local/lib64")
endif()

add_library(rairs_dynamic SHARED ${RAIRS_SRC})
add_library(rairs_static STATIC ${RAIRS_SRC})
set_target_properties(rairs_dynamic PROPERTIES OUTPUT_NAME "rairs")
set_target_properties(rairs_dynamic PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
set_target_properties(rairs_static PROPERTIES OUTPUT_NAME "rairs")
set_target_properties(rairs_static PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)

add_executable(rairs_test rairs_test.cpp)
set_target_properties(rairs_test PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
target_link_libraries(rairs_test rairs_static)

# choose BLAS
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(BLA_VENDOR OpenBLAS)
    find_package(BLAS REQUIRED)
    if(BLAS_FOUND)
        message(STATUS "OpenBLAS library found: ${BLAS_LIBRARIES}")
        target_link_libraries(rairs_dynamic ${BLAS_LIBRARIES})
        target_link_libraries(rairs_test ${BLAS_LIBRARIES})
    else()
        message(STATUS "OpenBLAS library not found")
        target_link_libraries(rairs_dynamic -lblas -lapack)
        target_link_libraries(rairs_test -lblas -lapack)
    endif()
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    find_library(ACCELERATE Accelerate)
    if(ACCELERATE)
        message(STATUS "Accelerate framework found")
        target_link_libraries(rairs_dynamic ${ACCELERATE})
        target_link_libraries(rairs_test ${ACCELERATE})
    else()
        message(STATUS "Accelerate framework not found")
        target_link_libraries(rairs_dynamic -lblas -lapack)
        target_link_libraries(rairs_test -lblas -lapack)
    endif()
else()
    target_link_libraries(rairs_dynamic -lblas -lapack)
    target_link_libraries(rairs_test -lblas -lapack)
endif()

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_link_libraries(rairs_dynamic -lgomp)
    target_link_libraries(rairs_test -lgomp)
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
    target_link_libraries(rairs_dynamic -lomp)
    target_link_libraries(rairs_test -lomp)
endif()

# check avx
find_library(FAISS_AVX512_EXISTS faiss_avx512)
find_library(FAISS_AVX2_EXISTS faiss_avx2)
find_library(FAISS_EXISTS faiss)
if(FAISS_AVX512_EXISTS)
    message(STATUS "libfaiss_avx512 exists")
    target_link_libraries(rairs_dynamic -lfaiss_avx512)
    target_link_libraries(rairs_test -lfaiss_avx512)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma -mf16c -mavx512f -mavx512cd -mavx512vl -mavx512dq -mavx512bw -mpopcnt")
elseif(FAISS_AVX2_EXISTS)
    message(STATUS "libfaiss_avx2 exists")
    target_link_libraries(rairs_dynamic -lfaiss_avx2)
    target_link_libraries(rairs_test -lfaiss_avx2)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma -mf16c -mpopcnt")
elseif(FAISS_EXISTS)
    message(STATUS "libfaiss exists")
    target_link_libraries(rairs_dynamic -lfaiss)
    target_link_libraries(rairs_test -lfaiss)
else()
    message(FATAL_ERROR "no libfaiss")
endif()